<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/fullerGeoCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visits_to_fuller_labs_geofence"
            android:textSize="18dp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/libraryGeoCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visits_to_library_geofence"
            android:textSize="18dp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stepsCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/steps_counter"
            android:textSize="18dp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/address_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_address"
            android:textSize="18dp"
            android:minLines="3"
            android:textAlignment="center"
            android:textStyle="bold" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            tools:context=".MainActivity"
            tools:layout="@layout/simple_map" />

        <ImageView
            android:id="@+id/activity_iv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerInside"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/activity_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_activity"
            android:textSize="18dp"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>